--- a/index.html
+++ b/index.html
@@ -3,6 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css"> <!-- Asegúrate de tener un archivo CSS -->
+    <title>Mi Página Web</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Si tienes un CSS -->
 </head>
+<body>
+    <header>
+        <h1>Bienvenido a Mi Página Web</h1>
+        <nav>
+            <ul>
+                <li><a href="ppv_velocity_components.html">Diagrama de Velocidad Azul</a></li>
+                <li><a href="ppv_velocity_components_cores.html">Diagrama de Velocidad Roja</a></li>
+                <li><a href="ppv_structures.html">Estructuras Filamentarias</a></li>
+                <li><a href="ppv_structures_cores.html">Núcleos Densos</a></li>
+                <li><a href="README.md">Ver README</a></li> <!-- Enlace al README -->
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <p>Aquí puedes ver los diferentes diagramas que he creado.</p>
+    </main>
+    <footer>
+        <p>Si deseas más información, consulta el <a href="README.md">README</a>.</p>
+    </footer>
+</body>
 </html>
