--- a/index.html
+++ b/index.html
@@ -3,27 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Si tienes un CSS -->
+    <title>README Viewer</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Si tienes un archivo CSS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.1.3/marked.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f9f9f9; /* Color de fondo */
+        }
+        pre {
+            background: #f4f4f4;
+            padding: 10px;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Mi Página Web</h1>
-        <nav>
-            <ul>
-                <li><a href="ppv_velocity_components.html">Diagrama de Velocidad Azul</a></li>
-                <li><a href="ppv_velocity_components_cores.html">Diagrama de Velocidad Roja</a></li>
-                <li><a href="ppv_structures.html">Estructuras Filamentarias</a></li>
-                <li><a href="ppv_structures_cores.html">Núcleos Densos</a></li>
-                <li><a href="README.md">Ver README</a></li> <!-- Enlace al README -->
-            </ul>
-        </nav>
+        <h1>README Viewer</h1>
     </header>
     <main>
-        <p>Aquí puedes ver los diferentes diagramas que he creado.</p>
+        <div id="content">Cargando...</div> <!-- Mensaje de carga -->
     </main>
-    <footer>
-        <p>Si deseas más información, consulta el <a href="README.md">README</a>.</p>
-    </footer>
+    <script>
+        fetch('README.md')
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.text();
+            })
+            .then(text => {
+                document.getElementById('content').innerHTML = marked(text);
+            })
+            .catch(error => {
+                console.error('Error loading README.md:', error);
+                document.getElementById('content').innerHTML = 'Error loading README.md';
+            });
+    </script>
 </body>
 </html>
