--- a/index.html
+++ b/index.html
@@ -1,46 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>README Viewer</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Si tienes un archivo CSS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.1.3/marked.min.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f9f9f9; /* Color de fondo */
-        }
-        pre {
-            background: #f4f4f4;
-            padding: 10px;
-            border-radius: 5px;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>README Viewer</h1>
-    </header>
-    <main>
-        <div id="content">Cargando...</div> <!-- Mensaje de carga -->
-    </main>
-    <script>
-        fetch('README.md')
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.text();
-            })
-            .then(text => {
-                document.getElementById('content').innerHTML = marked(text);
-            })
-            .catch(error => {
-                console.error('Error loading README.md:', error);
-                document.getElementById('content').innerHTML = 'Error loading README.md';
-            });
-    </script>
-</body>
-</html>
+<a href="README.md">Ver README</a>
