--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página</title>
+    <title>PPV diagrams</title>
     <link rel="stylesheet" href="styles.css"> <!-- Asegúrate de tener un archivo CSS -->
 </head>
 <body>
-    <h1>Bienvenido a Mi Página Web</h1>
-    <p>Aquí puedes encontrar mis diagramas:</p>
+    <h1>Position-Position-Velocity diagrams of N2H+ (1-0) line emission in G351.77 protocluster Web</h1>
     <ul>
-        <li><a href="diagrama1.html">Diagrama 1</a></li>
-        <li><a href="diagrama2.html">Diagrama 2</a></li>
+        <li><a href="ppv_structures.html">See PPV of filamentary structures</a></li>
+        <li><a href="ppv_structures_cores.html">See PPV of filamentary structures with cores</a></li>
+        <li><a href="ppv_velocity_components.html">See PPV of velocity components</a></li>
+        <li><a href="ppv_velocity_components_cores.html">See PPV of velocity components with cores</a></li>
     </ul>
 </body>
 </html>
