--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PPV diagrams</title>
+    <title>Diagrams</title>
     <link rel="stylesheet" href="styles.css"> <!-- Asegúrate de tener un archivo CSS -->
 </head>
 <body>
