--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diagrams</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Asegúrate de tener un archivo CSS -->
+    <link rel="stylesheet" href="style.css"> <!-- Asegúrate de tener un archivo CSS -->
 </head>
 <body>
     <h1>Position-Position-Velocity diagrams of N2H+ (1-0) line emission in G351.77 protocluster Web</h1>
