--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"> <!-- Asegúrate de tener un archivo CSS -->
 </head>
 <body>
-    <h1>Position-Position-Velocity diagrams of N2H+ (1-0) line emission in G351.77 protocluster Web</h1>
+    <h1>Position-Position-Velocity diagrams of N2H+ (1-0) line emission in G351.77 protocluster</h1>
     <ul>
         <li><a href="ppv_structures.html">See PPV of filamentary structures</a></li>
         <li><a href="ppv_structures_cores.html">See PPV of filamentary structures with cores</a></li>
